# GearRay

./: .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build-profile.bat  build.bat
docs/: ASSET_PROVENANCE.md  BUILDING.md  ENGINE_ARCHITECTURE.md  ENGINE_FOUNDATION_V1.0.0.md  PROJECT_BIBLE.md  ROM_BANKING.md  SPRINT_11_TASK_107_RENDERER_PROFILE.md  SPRINT_11_TASK_108_OPTIMIZATION_PASS_1.md  SPRINT_17_DISTANT_WALL_LOD.md  SPRINT_21_ENGINE_PERFORMANCE_AUDIT.md  SPRINT_22_FINAL_DISTANT_WALL_LOD.md  SPRINT_23_SENIOR_CODE_CLEANUP_AUDIT.md  SPRINT_24_PLAYER_MOVEMENT_AND_CONTROL_FEEL.md  SPRINT_25_EXPERIMENTAL_8X8_WALL_TEXTURE.md  SPRINT_26_EXPERIMENTAL_FAR_WALL_DITHER.md  SPRINT_27_EXPERIMENTAL_BLACK_FOG_LOD.md  SPRINT_28_EXPERIMENTAL_DISTANCE_ATTENUATION.md  SPRINT_29_HYBRID_DISTANCE_FOG.md  SPRINT_30_POST_8X8_RENDERER_PERFORMANCE_AUDIT.md  SPRINT_31_FINAL_GAME_GEAR_CONTROLS.md  SPRINT_31_SENIOR_ENGINE_ARCHITECTURE_AUDIT.md
engine/render/: raycaster.c  raycaster.h  wall_side.h
game/: camera.c  camera.h  door_instances.c  door_instances.h  door_states.c  door_states.h  interaction_ray.c  interaction_ray.h  interaction_target.h  main.c  player.c  player.h  workshop_map.c  workshop_map.h  world.c  world.h  world_interactions.c  world_interactions.h  world_materials.c  world_materials.h  world_object.h  world_objects.c  world_objects.h
platform/game_gear/: input.c  input.h  render_textures.c  render_textures.h  renderer_profile.c  renderer_profile.h  texture_loader.c  texture_loader.h  texture_shading.c  texture_shading.h  texture_shading_config.h  video.c  video.h  vram_layout.c  vram_layout.h  wall_materials.c  wall_materials.h  wall_textures.c  wall_textures.h
source/: main.c
tools/: generate_wall_texture.ps1  validate_final_controls.ps1  validate_renderer_equivalence.ps1
