cmake_minimum_required(VERSION 3.20)

# SDCC is driven explicitly below, so CMake does not need a host compiler.
project(gear_ray VERSION 0.1.0 LANGUAGES NONE)

option(GEARRAY_PROFILE_RENDERER "Collect renderer profiling counters" OFF)
if(GEARRAY_PROFILE_RENDERER)
    set(GEAR_RAY_RENDERER_PROFILE_DEFINE -DGEARRAY_PROFILE_RENDERER)
else()
    set(GEAR_RAY_RENDERER_PROFILE_DEFINE)
endif()

set(GEAR_RAY_BUILD_DIR "${CMAKE_BINARY_DIR}" CACHE PATH "Generated build output directory")
set(GEAR_RAY_ROM_FILENAME "GearRay.gg" CACHE STRING "Packaged Game Gear ROM filename")
set(GEAR_RAY_DEVKITSMS_ROOT "D:/Tools/devkitSMS" CACHE PATH "Path to the local devkitSMS installation")
set(GEAR_RAY_MAKESMS_EXECUTABLE "${GEAR_RAY_DEVKITSMS_ROOT}/makesms/Windows/makesms.exe" CACHE FILEPATH "Path to makesms.exe")

find_program(GEAR_RAY_SDCC_EXECUTABLE NAMES sdcc DOC "Path to SDCC executable")
if(NOT GEAR_RAY_SDCC_EXECUTABLE)
    message(FATAL_ERROR "SDCC was not found on PATH.")
endif()

find_program(GEAR_RAY_POWERSHELL_EXECUTABLE NAMES powershell DOC "Path to Windows PowerShell")
if(NOT GEAR_RAY_POWERSHELL_EXECUTABLE)
    message(FATAL_ERROR "Windows PowerShell was not found on PATH.")
endif()

set(GEAR_RAY_SMSLIB_INCLUDE "${GEAR_RAY_DEVKITSMS_ROOT}/SMSlib/src")
set(GEAR_RAY_SMSLIB_LIBRARY "${GEAR_RAY_DEVKITSMS_ROOT}/SMSlib/SMSlib_GG.lib")
set(GEAR_RAY_CRT0 "${GEAR_RAY_DEVKITSMS_ROOT}/crt0/crt0_sms.rel")
set(GEAR_RAY_GAME_GEAR_PLATFORM_DIR "${CMAKE_SOURCE_DIR}/platform/game_gear")
set(GEAR_RAY_GAME_DIR "${CMAKE_SOURCE_DIR}/game")
set(GEAR_RAY_RENDER_DIR "${CMAKE_SOURCE_DIR}/engine/render")
set(GEAR_RAY_MAIN_SOURCE "${GEAR_RAY_GAME_DIR}/main.c")
set(GEAR_RAY_MAIN_OBJECT "${CMAKE_BINARY_DIR}/main.rel")
set(GEAR_RAY_CAMERA_SOURCE "${GEAR_RAY_GAME_DIR}/camera.c")
set(GEAR_RAY_CAMERA_HEADER "${GEAR_RAY_GAME_DIR}/camera.h")
set(GEAR_RAY_CAMERA_OBJECT "${CMAKE_BINARY_DIR}/camera.rel")
set(GEAR_RAY_RAYCASTER_SOURCE "${GEAR_RAY_RENDER_DIR}/raycaster.c")
set(GEAR_RAY_RAYCASTER_HEADER "${GEAR_RAY_RENDER_DIR}/raycaster.h")
set(GEAR_RAY_RAYCASTER_OBJECT "${CMAKE_BINARY_DIR}/raycaster.rel")
set(GEAR_RAY_WALL_SIDE_HEADER "${GEAR_RAY_RENDER_DIR}/wall_side.h")
set(GEAR_RAY_PLAYER_SOURCE "${GEAR_RAY_GAME_DIR}/player.c")
set(GEAR_RAY_PLAYER_HEADER "${GEAR_RAY_GAME_DIR}/player.h")
set(GEAR_RAY_PLAYER_OBJECT "${CMAKE_BINARY_DIR}/player.rel")
set(GEAR_RAY_INTERACTION_RAY_SOURCE "${GEAR_RAY_GAME_DIR}/interaction_ray.c")
set(GEAR_RAY_INTERACTION_RAY_HEADER "${GEAR_RAY_GAME_DIR}/interaction_ray.h")
set(GEAR_RAY_INTERACTION_RAY_OBJECT "${CMAKE_BINARY_DIR}/interaction_ray.rel")
set(GEAR_RAY_INTERACTION_TARGET_HEADER "${GEAR_RAY_GAME_DIR}/interaction_target.h")
set(GEAR_RAY_WORLD_INTERACTIONS_SOURCE "${GEAR_RAY_GAME_DIR}/world_interactions.c")
set(GEAR_RAY_WORLD_INTERACTIONS_HEADER "${GEAR_RAY_GAME_DIR}/world_interactions.h")
set(GEAR_RAY_WORLD_INTERACTIONS_OBJECT "${CMAKE_BINARY_DIR}/world_interactions.rel")
set(GEAR_RAY_WORLD_SOURCE "${GEAR_RAY_GAME_DIR}/world.c")
set(GEAR_RAY_WORLD_HEADER "${GEAR_RAY_GAME_DIR}/world.h")
set(GEAR_RAY_WORLD_OBJECT_HEADER "${GEAR_RAY_GAME_DIR}/world_object.h")
set(GEAR_RAY_WORLD_OBJECT "${CMAKE_BINARY_DIR}/world.rel")
set(GEAR_RAY_WORKSHOP_MAP_SOURCE "${GEAR_RAY_GAME_DIR}/workshop_map.c")
set(GEAR_RAY_WORKSHOP_MAP_HEADER "${GEAR_RAY_GAME_DIR}/workshop_map.h")
set(GEAR_RAY_WORKSHOP_MAP_OBJECT "${CMAKE_BINARY_DIR}/workshop_map.rel")
set(GEAR_RAY_WORLD_OBJECTS_SOURCE "${GEAR_RAY_GAME_DIR}/world_objects.c")
set(GEAR_RAY_WORLD_OBJECTS_HEADER "${GEAR_RAY_GAME_DIR}/world_objects.h")
set(GEAR_RAY_WORLD_OBJECTS_OBJECT "${CMAKE_BINARY_DIR}/world_objects.rel")
set(GEAR_RAY_DOOR_STATES_SOURCE "${GEAR_RAY_GAME_DIR}/door_states.c")
set(GEAR_RAY_DOOR_STATES_HEADER "${GEAR_RAY_GAME_DIR}/door_states.h")
set(GEAR_RAY_DOOR_STATES_OBJECT "${CMAKE_BINARY_DIR}/door_states.rel")
set(GEAR_RAY_DOOR_INSTANCES_SOURCE "${GEAR_RAY_GAME_DIR}/door_instances.c")
set(GEAR_RAY_DOOR_INSTANCES_HEADER "${GEAR_RAY_GAME_DIR}/door_instances.h")
set(GEAR_RAY_DOOR_INSTANCES_OBJECT "${CMAKE_BINARY_DIR}/door_instances.rel")
set(GEAR_RAY_INPUT_SOURCE "${GEAR_RAY_GAME_GEAR_PLATFORM_DIR}/input.c")
set(GEAR_RAY_INPUT_HEADER "${GEAR_RAY_GAME_GEAR_PLATFORM_DIR}/input.h")
set(GEAR_RAY_INPUT_OBJECT "${CMAKE_BINARY_DIR}/input.rel")
set(GEAR_RAY_VIDEO_SOURCE "${GEAR_RAY_GAME_GEAR_PLATFORM_DIR}/video.c")
set(GEAR_RAY_VIDEO_HEADER "${GEAR_RAY_GAME_GEAR_PLATFORM_DIR}/video.h")
set(GEAR_RAY_VIDEO_OBJECT "${CMAKE_BINARY_DIR}/video.rel")
set(GEAR_RAY_RENDER_TEXTURES_SOURCE "${GEAR_RAY_GAME_GEAR_PLATFORM_DIR}/render_textures.c")
set(GEAR_RAY_RENDER_TEXTURES_HEADER "${GEAR_RAY_GAME_GEAR_PLATFORM_DIR}/render_textures.h")
set(GEAR_RAY_RENDER_TEXTURES_OBJECT "${CMAKE_BINARY_DIR}/render_textures.rel")
set(GEAR_RAY_RENDERER_PROFILE_SOURCE "${GEAR_RAY_GAME_GEAR_PLATFORM_DIR}/renderer_profile.c")
set(GEAR_RAY_RENDERER_PROFILE_HEADER "${GEAR_RAY_GAME_GEAR_PLATFORM_DIR}/renderer_profile.h")
set(GEAR_RAY_RENDERER_PROFILE_OBJECT "${CMAKE_BINARY_DIR}/renderer_profile.rel")
if(GEARRAY_PROFILE_RENDERER)
    set(GEAR_RAY_RENDERER_PROFILE_LINK_OBJECT
        "${GEAR_RAY_RENDERER_PROFILE_OBJECT}")
else()
    set(GEAR_RAY_RENDERER_PROFILE_LINK_OBJECT)
endif()
set(GEAR_RAY_WALL_TEXTURES_SOURCE "${GEAR_RAY_GAME_GEAR_PLATFORM_DIR}/wall_textures.c")
set(GEAR_RAY_WALL_TEXTURES_HEADER "${GEAR_RAY_GAME_GEAR_PLATFORM_DIR}/wall_textures.h")
set(GEAR_RAY_WALL_TEXTURES_OBJECT "${CMAKE_BINARY_DIR}/wall_textures.rel")
set(GEAR_RAY_WALL_TEXTURE_INPUT "${CMAKE_SOURCE_DIR}/assets/textures/walls/wall_concrete.png")
set(GEAR_RAY_DOOR_TEXTURE_INPUT "${CMAKE_SOURCE_DIR}/assets/textures/walls/wall_door.png")
set(GEAR_RAY_WALL_TEXTURE_GENERATOR "${CMAKE_SOURCE_DIR}/tools/generate_wall_texture.ps1")
set(GEAR_RAY_GENERATED_DIR "${CMAKE_BINARY_DIR}/generated")
set(GEAR_RAY_GENERATED_WALL_TEXTURE_SOURCE "${GEAR_RAY_GENERATED_DIR}/wall_texture.c")
set(GEAR_RAY_GENERATED_WALL_TEXTURE_HEADER "${GEAR_RAY_GENERATED_DIR}/wall_texture.h")
set(GEAR_RAY_GENERATED_WALL_TEXTURE_OBJECT "${CMAKE_BINARY_DIR}/generated_wall_texture.rel")
set(GEAR_RAY_VRAM_LAYOUT_HEADER "${GEAR_RAY_GAME_GEAR_PLATFORM_DIR}/vram_layout.h")
set(GEAR_RAY_IHX "${CMAKE_BINARY_DIR}/GearRay.ihx")
set(GEAR_RAY_ROM_DIR "${CMAKE_SOURCE_DIR}/rom")
set(GEAR_RAY_ROM "${GEAR_RAY_ROM_DIR}/${GEAR_RAY_ROM_FILENAME}")

foreach(required_path
        "${GEAR_RAY_DEVKITSMS_ROOT}"
        "${GEAR_RAY_MAKESMS_EXECUTABLE}"
        "${GEAR_RAY_SMSLIB_INCLUDE}/SMSlib.h"
        "${GEAR_RAY_SMSLIB_LIBRARY}"
        "${GEAR_RAY_CRT0}")
    if(NOT EXISTS "${required_path}")
        message(FATAL_ERROR "Required Game Gear toolchain file was not found: ${required_path}")
    endif()
endforeach()

add_custom_command(
    OUTPUT "${GEAR_RAY_MAIN_OBJECT}"
    COMMAND "${GEAR_RAY_SDCC_EXECUTABLE}"
            -mz80
            -DTARGET_GG
            ${GEAR_RAY_RENDERER_PROFILE_DEFINE}
            "-I${GEAR_RAY_SMSLIB_INCLUDE}"
            "-I${GEAR_RAY_GAME_GEAR_PLATFORM_DIR}"
            "-I${GEAR_RAY_GAME_DIR}"
            "-I${GEAR_RAY_RENDER_DIR}"
            --peep-file "${GEAR_RAY_SMSLIB_INCLUDE}/peep-rules.txt"
            -c "${GEAR_RAY_MAIN_SOURCE}"
            -o "${GEAR_RAY_MAIN_OBJECT}"
    DEPENDS "${GEAR_RAY_MAIN_SOURCE}" "${GEAR_RAY_CAMERA_HEADER}" "${GEAR_RAY_RAYCASTER_HEADER}" "${GEAR_RAY_INPUT_HEADER}" "${GEAR_RAY_PLAYER_HEADER}" "${GEAR_RAY_VIDEO_HEADER}" "${GEAR_RAY_RENDERER_PROFILE_HEADER}" "${GEAR_RAY_WORLD_HEADER}" "${GEAR_RAY_WORLD_OBJECT_HEADER}" "${GEAR_RAY_DOOR_INSTANCES_HEADER}" "${GEAR_RAY_DOOR_STATES_HEADER}" "${GEAR_RAY_SMSLIB_INCLUDE}/SMSlib.h"
    COMMENT "Compiling game/main.c for Game Gear"
    VERBATIM
)

add_custom_command(
    OUTPUT "${GEAR_RAY_RAYCASTER_OBJECT}"
    COMMAND "${GEAR_RAY_SDCC_EXECUTABLE}"
            -mz80
            -DTARGET_GG
            ${GEAR_RAY_RENDERER_PROFILE_DEFINE}
            "-I${GEAR_RAY_GAME_GEAR_PLATFORM_DIR}"
            "-I${GEAR_RAY_GAME_DIR}"
            "-I${GEAR_RAY_RENDER_DIR}"
            -c "${GEAR_RAY_RAYCASTER_SOURCE}"
            -o "${GEAR_RAY_RAYCASTER_OBJECT}"
    DEPENDS "${GEAR_RAY_RAYCASTER_SOURCE}" "${GEAR_RAY_RAYCASTER_HEADER}" "${GEAR_RAY_WALL_SIDE_HEADER}" "${GEAR_RAY_RENDERER_PROFILE_HEADER}" "${GEAR_RAY_CAMERA_HEADER}" "${GEAR_RAY_WORLD_HEADER}" "${GEAR_RAY_WORLD_OBJECT_HEADER}" "${GEAR_RAY_DOOR_STATES_HEADER}"
    COMMENT "Compiling engine/render/raycaster.c for Game Gear"
    VERBATIM
)

add_custom_command(
    OUTPUT "${GEAR_RAY_CAMERA_OBJECT}"
    COMMAND "${GEAR_RAY_SDCC_EXECUTABLE}"
            -mz80
            -DTARGET_GG
            "-I${GEAR_RAY_GAME_DIR}"
            -c "${GEAR_RAY_CAMERA_SOURCE}"
            -o "${GEAR_RAY_CAMERA_OBJECT}"
    DEPENDS "${GEAR_RAY_CAMERA_SOURCE}" "${GEAR_RAY_CAMERA_HEADER}"
    COMMENT "Compiling game/camera.c for Game Gear"
    VERBATIM
)

add_custom_command(
    OUTPUT "${GEAR_RAY_WORLD_OBJECT}"
    COMMAND "${GEAR_RAY_SDCC_EXECUTABLE}"
            -mz80
            -DTARGET_GG
            "-I${GEAR_RAY_SMSLIB_INCLUDE}"
            "-I${GEAR_RAY_GAME_DIR}"
            --peep-file "${GEAR_RAY_SMSLIB_INCLUDE}/peep-rules.txt"
            -c "${GEAR_RAY_WORLD_SOURCE}"
            -o "${GEAR_RAY_WORLD_OBJECT}"
    DEPENDS "${GEAR_RAY_WORLD_SOURCE}" "${GEAR_RAY_WORLD_HEADER}" "${GEAR_RAY_WORLD_OBJECT_HEADER}" "${GEAR_RAY_DOOR_INSTANCES_HEADER}" "${GEAR_RAY_DOOR_STATES_HEADER}" "${GEAR_RAY_SMSLIB_INCLUDE}/SMSlib.h"
    COMMENT "Compiling game/world.c for Game Gear"
    VERBATIM
)

add_custom_command(
    OUTPUT "${GEAR_RAY_WORKSHOP_MAP_OBJECT}"
    COMMAND "${GEAR_RAY_SDCC_EXECUTABLE}"
            -mz80
            -DTARGET_GG
            "-I${GEAR_RAY_GAME_DIR}"
            -c "${GEAR_RAY_WORKSHOP_MAP_SOURCE}"
            -o "${GEAR_RAY_WORKSHOP_MAP_OBJECT}"
    DEPENDS "${GEAR_RAY_WORKSHOP_MAP_SOURCE}" "${GEAR_RAY_WORKSHOP_MAP_HEADER}" "${GEAR_RAY_WORLD_HEADER}"
    COMMENT "Compiling game/workshop_map.c for Game Gear"
    VERBATIM
)

add_custom_command(
    OUTPUT "${GEAR_RAY_WORLD_OBJECTS_OBJECT}"
    COMMAND "${GEAR_RAY_SDCC_EXECUTABLE}"
            -mz80
            -DTARGET_GG
            "-I${GEAR_RAY_GAME_DIR}"
            -c "${GEAR_RAY_WORLD_OBJECTS_SOURCE}"
            -o "${GEAR_RAY_WORLD_OBJECTS_OBJECT}"
    DEPENDS "${GEAR_RAY_WORLD_OBJECTS_SOURCE}" "${GEAR_RAY_WORLD_OBJECTS_HEADER}" "${GEAR_RAY_WORLD_OBJECT_HEADER}" "${GEAR_RAY_DOOR_INSTANCES_HEADER}" "${GEAR_RAY_DOOR_STATES_HEADER}"
    COMMENT "Compiling game/world_objects.c for Game Gear"
    VERBATIM
)

add_custom_command(
    OUTPUT "${GEAR_RAY_DOOR_INSTANCES_OBJECT}"
    COMMAND "${GEAR_RAY_SDCC_EXECUTABLE}"
            -mz80
            -DTARGET_GG
            "-I${GEAR_RAY_GAME_DIR}"
            -c "${GEAR_RAY_DOOR_INSTANCES_SOURCE}"
            -o "${GEAR_RAY_DOOR_INSTANCES_OBJECT}"
    DEPENDS "${GEAR_RAY_DOOR_INSTANCES_SOURCE}" "${GEAR_RAY_DOOR_INSTANCES_HEADER}"
    COMMENT "Compiling game/door_instances.c for Game Gear"
    VERBATIM
)

add_custom_command(
    OUTPUT "${GEAR_RAY_DOOR_STATES_OBJECT}"
    COMMAND "${GEAR_RAY_SDCC_EXECUTABLE}"
            -mz80
            -DTARGET_GG
            "-I${GEAR_RAY_GAME_DIR}"
            -c "${GEAR_RAY_DOOR_STATES_SOURCE}"
            -o "${GEAR_RAY_DOOR_STATES_OBJECT}"
    DEPENDS "${GEAR_RAY_DOOR_STATES_SOURCE}" "${GEAR_RAY_DOOR_STATES_HEADER}" "${GEAR_RAY_DOOR_INSTANCES_HEADER}"
    COMMENT "Compiling game/door_states.c for Game Gear"
    VERBATIM
)

add_custom_command(
    OUTPUT "${GEAR_RAY_VIDEO_OBJECT}"
    COMMAND "${GEAR_RAY_SDCC_EXECUTABLE}"
            -mz80
            -DTARGET_GG
            ${GEAR_RAY_RENDERER_PROFILE_DEFINE}
            "-I${GEAR_RAY_SMSLIB_INCLUDE}"
            "-I${GEAR_RAY_GAME_GEAR_PLATFORM_DIR}"
            --peep-file "${GEAR_RAY_SMSLIB_INCLUDE}/peep-rules.txt"
            -c "${GEAR_RAY_VIDEO_SOURCE}"
            -o "${GEAR_RAY_VIDEO_OBJECT}"
    DEPENDS "${GEAR_RAY_VIDEO_SOURCE}" "${GEAR_RAY_VIDEO_HEADER}" "${GEAR_RAY_RENDER_TEXTURES_HEADER}" "${GEAR_RAY_RENDERER_PROFILE_HEADER}" "${GEAR_RAY_VRAM_LAYOUT_HEADER}" "${GEAR_RAY_WALL_TEXTURES_HEADER}" "${GEAR_RAY_RAYCASTER_HEADER}" "${GEAR_RAY_SMSLIB_INCLUDE}/SMSlib.h"
    COMMENT "Compiling platform/game_gear/video.c"
    VERBATIM
)

add_custom_command(
    OUTPUT "${GEAR_RAY_RENDER_TEXTURES_OBJECT}"
    COMMAND "${GEAR_RAY_SDCC_EXECUTABLE}"
            -mz80
            -DTARGET_GG
            ${GEAR_RAY_RENDERER_PROFILE_DEFINE}
            "-I${GEAR_RAY_SMSLIB_INCLUDE}"
            "-I${GEAR_RAY_GAME_GEAR_PLATFORM_DIR}"
            "-I${GEAR_RAY_GAME_DIR}"
            "-I${GEAR_RAY_RENDER_DIR}"
            "-I${GEAR_RAY_GENERATED_DIR}"
            --peep-file "${GEAR_RAY_SMSLIB_INCLUDE}/peep-rules.txt"
            -c "${GEAR_RAY_RENDER_TEXTURES_SOURCE}"
            -o "${GEAR_RAY_RENDER_TEXTURES_OBJECT}"
    DEPENDS "${GEAR_RAY_RENDER_TEXTURES_SOURCE}" "${GEAR_RAY_RENDER_TEXTURES_HEADER}" "${GEAR_RAY_RENDERER_PROFILE_HEADER}" "${GEAR_RAY_WALL_TEXTURES_HEADER}" "${GEAR_RAY_GENERATED_WALL_TEXTURE_HEADER}"
    COMMENT "Compiling platform/game_gear/render_textures.c"
    VERBATIM
)

add_custom_command(
    OUTPUT "${GEAR_RAY_RENDERER_PROFILE_OBJECT}"
    COMMAND "${GEAR_RAY_SDCC_EXECUTABLE}"
            -mz80
            -DTARGET_GG
            ${GEAR_RAY_RENDERER_PROFILE_DEFINE}
            "-I${GEAR_RAY_SMSLIB_INCLUDE}"
            "-I${GEAR_RAY_GAME_GEAR_PLATFORM_DIR}"
            --codeseg BANK1
            --peep-file "${GEAR_RAY_SMSLIB_INCLUDE}/peep-rules.txt"
            -c "${GEAR_RAY_RENDERER_PROFILE_SOURCE}"
            -o "${GEAR_RAY_RENDERER_PROFILE_OBJECT}"
    DEPENDS "${GEAR_RAY_RENDERER_PROFILE_SOURCE}" "${GEAR_RAY_RENDERER_PROFILE_HEADER}" "${GEAR_RAY_SMSLIB_INCLUDE}/SMSlib.h"
    COMMENT "Compiling renderer profiling diagnostics"
    VERBATIM
)

add_custom_command(
    OUTPUT "${GEAR_RAY_GENERATED_WALL_TEXTURE_SOURCE}" "${GEAR_RAY_GENERATED_WALL_TEXTURE_HEADER}"
    COMMAND "${GEAR_RAY_POWERSHELL_EXECUTABLE}"
            -NoProfile
            -ExecutionPolicy Bypass
            -File "${GEAR_RAY_WALL_TEXTURE_GENERATOR}"
            -InputPath "${GEAR_RAY_WALL_TEXTURE_INPUT}"
            -DoorInputPath "${GEAR_RAY_DOOR_TEXTURE_INPUT}"
            -OutputSource "${GEAR_RAY_GENERATED_WALL_TEXTURE_SOURCE}"
            -OutputHeader "${GEAR_RAY_GENERATED_WALL_TEXTURE_HEADER}"
    DEPENDS "${GEAR_RAY_WALL_TEXTURE_INPUT}" "${GEAR_RAY_DOOR_TEXTURE_INPUT}" "${GEAR_RAY_WALL_TEXTURE_GENERATOR}"
    COMMENT "Generating packed 4bpp indexed-color wall texture"
    VERBATIM
)

add_custom_command(
    OUTPUT "${GEAR_RAY_GENERATED_WALL_TEXTURE_OBJECT}"
    COMMAND "${GEAR_RAY_SDCC_EXECUTABLE}"
            -mz80
            "-I${GEAR_RAY_GENERATED_DIR}"
            -c "${GEAR_RAY_GENERATED_WALL_TEXTURE_SOURCE}"
            -o "${GEAR_RAY_GENERATED_WALL_TEXTURE_OBJECT}"
    DEPENDS "${GEAR_RAY_GENERATED_WALL_TEXTURE_SOURCE}" "${GEAR_RAY_GENERATED_WALL_TEXTURE_HEADER}"
    COMMENT "Compiling generated wall texture"
    VERBATIM
)

add_custom_command(
    OUTPUT "${GEAR_RAY_WALL_TEXTURES_OBJECT}"
    COMMAND "${GEAR_RAY_SDCC_EXECUTABLE}"
            -mz80
            -DTARGET_GG
            ${GEAR_RAY_RENDERER_PROFILE_DEFINE}
            "-I${GEAR_RAY_GAME_GEAR_PLATFORM_DIR}"
            "-I${GEAR_RAY_GENERATED_DIR}"
            --peep-file "${GEAR_RAY_SMSLIB_INCLUDE}/peep-rules.txt"
            -c "${GEAR_RAY_WALL_TEXTURES_SOURCE}"
            -o "${GEAR_RAY_WALL_TEXTURES_OBJECT}"
    DEPENDS "${GEAR_RAY_WALL_TEXTURES_SOURCE}" "${GEAR_RAY_WALL_TEXTURES_HEADER}" "${GEAR_RAY_GENERATED_WALL_TEXTURE_HEADER}"
    COMMENT "Compiling platform/game_gear/wall_textures.c"
    VERBATIM
)

add_custom_command(
    OUTPUT "${GEAR_RAY_INTERACTION_RAY_OBJECT}"
    COMMAND "${GEAR_RAY_SDCC_EXECUTABLE}"
            -mz80
            -DTARGET_GG
            "-I${GEAR_RAY_GAME_DIR}"
            --codeseg BANK1
            -c "${GEAR_RAY_INTERACTION_RAY_SOURCE}"
            -o "${GEAR_RAY_INTERACTION_RAY_OBJECT}"
    DEPENDS "${GEAR_RAY_INTERACTION_RAY_SOURCE}" "${GEAR_RAY_INTERACTION_RAY_HEADER}" "${GEAR_RAY_INTERACTION_TARGET_HEADER}" "${GEAR_RAY_WORLD_HEADER}" "${GEAR_RAY_WORLD_OBJECTS_HEADER}" "${GEAR_RAY_WORLD_OBJECT_HEADER}"
    COMMENT "Compiling game/interaction_ray.c for Game Gear"
    VERBATIM
)

add_custom_command(
    OUTPUT "${GEAR_RAY_WORLD_INTERACTIONS_OBJECT}"
    COMMAND "${GEAR_RAY_SDCC_EXECUTABLE}"
            -mz80
            -DTARGET_GG
            "-I${GEAR_RAY_GAME_DIR}"
            --codeseg BANK1
            -c "${GEAR_RAY_WORLD_INTERACTIONS_SOURCE}"
            -o "${GEAR_RAY_WORLD_INTERACTIONS_OBJECT}"
    DEPENDS "${GEAR_RAY_WORLD_INTERACTIONS_SOURCE}" "${GEAR_RAY_WORLD_INTERACTIONS_HEADER}" "${GEAR_RAY_INTERACTION_TARGET_HEADER}" "${GEAR_RAY_WORLD_HEADER}" "${GEAR_RAY_WORLD_OBJECTS_HEADER}" "${GEAR_RAY_WORLD_OBJECT_HEADER}" "${GEAR_RAY_DOOR_INSTANCES_HEADER}" "${GEAR_RAY_DOOR_STATES_HEADER}"
    COMMENT "Compiling game/world_interactions.c for Game Gear"
    VERBATIM
)

add_custom_command(
    OUTPUT "${GEAR_RAY_PLAYER_OBJECT}"
    COMMAND "${GEAR_RAY_SDCC_EXECUTABLE}"
            -mz80
            -DTARGET_GG
            "-I${GEAR_RAY_SMSLIB_INCLUDE}"
            "-I${GEAR_RAY_GAME_GEAR_PLATFORM_DIR}"
            "-I${GEAR_RAY_GAME_DIR}"
            --peep-file "${GEAR_RAY_SMSLIB_INCLUDE}/peep-rules.txt"
            -c "${GEAR_RAY_PLAYER_SOURCE}"
            -o "${GEAR_RAY_PLAYER_OBJECT}"
    DEPENDS "${GEAR_RAY_PLAYER_SOURCE}" "${GEAR_RAY_PLAYER_HEADER}" "${GEAR_RAY_INTERACTION_RAY_HEADER}" "${GEAR_RAY_INTERACTION_TARGET_HEADER}" "${GEAR_RAY_WORLD_INTERACTIONS_HEADER}" "${GEAR_RAY_WORLD_HEADER}" "${GEAR_RAY_INPUT_HEADER}" "${GEAR_RAY_CAMERA_HEADER}" "${GEAR_RAY_SMSLIB_INCLUDE}/SMSlib.h"
    COMMENT "Compiling game/player.c for Game Gear"
    VERBATIM
)

add_custom_command(
    OUTPUT "${GEAR_RAY_INPUT_OBJECT}"
    COMMAND "${GEAR_RAY_SDCC_EXECUTABLE}"
            -mz80
            -DTARGET_GG
            "-I${GEAR_RAY_SMSLIB_INCLUDE}"
            "-I${GEAR_RAY_GAME_GEAR_PLATFORM_DIR}"
            --peep-file "${GEAR_RAY_SMSLIB_INCLUDE}/peep-rules.txt"
            -c "${GEAR_RAY_INPUT_SOURCE}"
            -o "${GEAR_RAY_INPUT_OBJECT}"
    DEPENDS "${GEAR_RAY_INPUT_SOURCE}" "${GEAR_RAY_INPUT_HEADER}" "${GEAR_RAY_SMSLIB_INCLUDE}/SMSlib.h"
    COMMENT "Compiling platform/game_gear/input.c"
    VERBATIM
)

add_custom_command(
    OUTPUT "${GEAR_RAY_IHX}"
    COMMAND "${GEAR_RAY_SDCC_EXECUTABLE}"
            -o "${GEAR_RAY_IHX}"
            -mz80
            --no-std-crt0
            --data-loc 0xC000
            -Wl-b_BANK1=0x14000
            "${GEAR_RAY_CRT0}"
            "${GEAR_RAY_MAIN_OBJECT}"
            "${GEAR_RAY_CAMERA_OBJECT}"
            "${GEAR_RAY_RAYCASTER_OBJECT}"
            "${GEAR_RAY_PLAYER_OBJECT}"
            "${GEAR_RAY_WORLD_OBJECT}"
            "${GEAR_RAY_WORKSHOP_MAP_OBJECT}"
            "${GEAR_RAY_WORLD_OBJECTS_OBJECT}"
            "${GEAR_RAY_DOOR_INSTANCES_OBJECT}"
            "${GEAR_RAY_DOOR_STATES_OBJECT}"
            "${GEAR_RAY_INPUT_OBJECT}"
            "${GEAR_RAY_VIDEO_OBJECT}"
            "${GEAR_RAY_RENDER_TEXTURES_OBJECT}"
            "${GEAR_RAY_WALL_TEXTURES_OBJECT}"
            "${GEAR_RAY_GENERATED_WALL_TEXTURE_OBJECT}"
            "${GEAR_RAY_SMSLIB_LIBRARY}"
            "${GEAR_RAY_INTERACTION_RAY_OBJECT}"
            "${GEAR_RAY_WORLD_INTERACTIONS_OBJECT}"
            ${GEAR_RAY_RENDERER_PROFILE_LINK_OBJECT}
    DEPENDS "${GEAR_RAY_MAIN_OBJECT}" "${GEAR_RAY_CAMERA_OBJECT}" "${GEAR_RAY_RAYCASTER_OBJECT}" "${GEAR_RAY_PLAYER_OBJECT}" "${GEAR_RAY_INTERACTION_RAY_OBJECT}" "${GEAR_RAY_WORLD_INTERACTIONS_OBJECT}" "${GEAR_RAY_WORLD_OBJECT}" "${GEAR_RAY_WORKSHOP_MAP_OBJECT}" "${GEAR_RAY_WORLD_OBJECTS_OBJECT}" "${GEAR_RAY_DOOR_INSTANCES_OBJECT}" "${GEAR_RAY_DOOR_STATES_OBJECT}" "${GEAR_RAY_INPUT_OBJECT}" "${GEAR_RAY_VIDEO_OBJECT}" "${GEAR_RAY_RENDER_TEXTURES_OBJECT}" ${GEAR_RAY_RENDERER_PROFILE_LINK_OBJECT} "${GEAR_RAY_WALL_TEXTURES_OBJECT}" "${GEAR_RAY_GENERATED_WALL_TEXTURE_OBJECT}" "${GEAR_RAY_CRT0}" "${GEAR_RAY_SMSLIB_LIBRARY}"
    COMMENT "Linking GearRay for Game Gear"
    VERBATIM
)

add_custom_command(
    OUTPUT "${GEAR_RAY_ROM}"
    COMMAND "${CMAKE_COMMAND}" -E make_directory "${GEAR_RAY_ROM_DIR}"
    COMMAND "${GEAR_RAY_MAKESMS_EXECUTABLE}" "${GEAR_RAY_IHX}" "${GEAR_RAY_ROM}"
    DEPENDS "${GEAR_RAY_IHX}"
    COMMENT "Generating rom/${GEAR_RAY_ROM_FILENAME}"
    VERBATIM
)

# Preserve the existing project target structure while making the game target real.
add_custom_target(gear_ray_engine)
add_custom_target(gear_ray_game ALL DEPENDS "${GEAR_RAY_ROM}")
add_dependencies(gear_ray_game gear_ray_engine)

add_custom_target(gear_ray_info ALL
    COMMAND "${CMAKE_COMMAND}" -E echo "GearRay Game Gear ROM: ${GEAR_RAY_ROM}"
    DEPENDS "${GEAR_RAY_ROM}"
    VERBATIM
)
